Fix exchange overview style on Firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,7 +88,7 @@ div.exchange-link span.slash {
 div.exchange-link-chart {
     display: table;
     min-height: 300px;
-    height: 100%;
+    height: 300px;
     width: 100%;
 }
 /**************************************/
